testbed/microservice_replication/framework/yamls-to-apply/checkoutservice-apply/checkoutservice-deploy-10.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice-0
spec:
  selector:
    matchLabels:
      app: checkoutservice-0
  template:
    metadata:
      labels:
        app: checkoutservice-0
    spec:
      containers:
      - env:
        - name: PORT
          value: '58696'
        - name: PRODUCT_CATALOG_SERVICE_ADDR
          value: productcatalogservice-4:47089
        - name: SHIPPING_SERVICE_ADDR
          value: shippingservice-5:60729
        - name: PAYMENT_SERVICE_ADDR
          value: paymentservice-7:22073
        - name: EMAIL_SERVICE_ADDR
          value: emailservice-3:65167
        - name: CURRENCY_SERVICE_ADDR
          value: currencyservice-3:44718
        - name: CART_SERVICE_ADDR
          value: cartservice-1:7070
        image: gcr.io/google-samples/microservices-demo/checkoutservice:v0.5.0
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:58696
        name: server
        ports:
        - containerPort: 58696
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:58696
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - all
          privileged: false
          readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: default
