testbed/microservice_replication/framework/yamls-to-apply/checkoutservice-apply/checkoutservice-deploy-6.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice-6
spec:
  selector:
    matchLabels:
      app: checkoutservice-6
  template:
    metadata:
      labels:
        app: checkoutservice-6
    spec:
      containers:
      - env:
        - name: PORT
          value: '28804'
        - name: PRODUCT_CATALOG_SERVICE_ADDR
          value: productcatalogservice-4:47089
        - name: SHIPPING_SERVICE_ADDR
          value: shippingservice-5:60729
        - name: PAYMENT_SERVICE_ADDR
          value: paymentservice-6:46642
        - name: EMAIL_SERVICE_ADDR
          value: emailservice-6:11942
        - name: CURRENCY_SERVICE_ADDR
          value: currencyservice-6:10455
        - name: CART_SERVICE_ADDR
          value: cartservice-1:7070
        image: gcr.io/google-samples/microservices-demo/checkoutservice:v0.5.0
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:28804
        name: server
        ports:
        - containerPort: 28804
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:28804
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - all
          privileged: false
          readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: default
