testbed/microservice_replication/framework/yamls-to-apply/checkoutservice-apply/checkoutservice-deploy-9.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice-8
spec:
  selector:
    matchLabels:
      app: checkoutservice-8
  template:
    metadata:
      labels:
        app: checkoutservice-8
    spec:
      containers:
      - env:
        - name: PORT
          value: '21079'
        - name: PRODUCT_CATALOG_SERVICE_ADDR
          value: productcatalogservice-1:32780
        - name: SHIPPING_SERVICE_ADDR
          value: shippingservice-3:11702
        - name: PAYMENT_SERVICE_ADDR
          value: paymentservice-7:20254
        - name: EMAIL_SERVICE_ADDR
          value: emailservice-1:24554
        - name: CURRENCY_SERVICE_ADDR
          value: currencyservice-2:6909
        - name: CART_SERVICE_ADDR
          value: cartservice-1:7070
        image: gcr.io/google-samples/microservices-demo/checkoutservice:v0.5.0
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:21079
        name: server
        ports:
        - containerPort: 21079
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:21079
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - all
          privileged: false
          readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: default
