testbed/microservice_replication/framework/yamls-to-apply/checkoutservice-apply/checkoutservice-svc-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice-1
spec:
  ports:
  - name: grpc
    port: 3854
    targetPort: 3854
  selector:
    app: checkoutservice-1
  type: ClusterIP
