testbed/microservice_replication/framework/yamls-to-apply/checkoutservice-apply/checkoutservice-svc-10.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice-0
spec:
  ports:
  - name: grpc
    port: 58696
    targetPort: 58696
  selector:
    app: checkoutservice-0
  type: ClusterIP
