testbed/microservice_replication/framework/yamls-to-apply/checkoutservice-apply/checkoutservice-svc-3.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice-3
spec:
  ports:
  - name: grpc
    port: 50442
    targetPort: 50442
  selector:
    app: checkoutservice-3
  type: ClusterIP
