testbed/microservice_replication/framework/yamls-to-apply/checkoutservice-apply/checkoutservice-svc-4.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice-4
spec:
  ports:
  - name: grpc
    port: 8241
    targetPort: 8241
  selector:
    app: checkoutservice-4
  type: ClusterIP
