testbed/microservice_replication/framework/yamls-to-apply/checkoutservice-apply/checkoutservice-svc-6.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice-6
spec:
  ports:
  - name: grpc
    port: 28804
    targetPort: 28804
  selector:
    app: checkoutservice-6
  type: ClusterIP
