testbed/microservice_replication/framework/yamls-to-apply/checkoutservice-apply/checkoutservice-svc-7.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice-7
spec:
  ports:
  - name: grpc
    port: 50886
    targetPort: 50886
  selector:
    app: checkoutservice-7
  type: ClusterIP
