testbed/microservice_replication/framework/yamls-to-apply/checkoutservice-apply/checkoutservice-svc-8.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice-7
spec:
  ports:
  - name: grpc
    port: 51531
    targetPort: 51531
  selector:
    app: checkoutservice-7
  type: ClusterIP
