testbed/microservice_replication/framework/yamls-to-apply/checkoutservice-apply/checkoutservice-netpol-1-frontend-1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: checkoutservice-1-allow-frontend-1
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend-1
    ports:
    - port: 3854
  podSelector:
    matchLabels:
      app: checkoutservice-1
