testbed/microservice_replication/framework/yamls-to-apply/checkoutservice-apply/checkoutservice-netpol-3-frontend-5.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: checkoutservice-3-allow-frontend-5
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend-5
    ports:
    - port: 50442
  podSelector:
    matchLabels:
      app: checkoutservice-3
