testbed/microservice_replication/framework/yamls-to-apply/checkoutservice-apply/checkoutservice-netpol-4-frontend-4.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: checkoutservice-4-allow-frontend-4
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend-4
    ports:
    - port: 8241
  podSelector:
    matchLabels:
      app: checkoutservice-4
