testbed/microservice_replication/framework/yamls-to-apply/checkoutservice-apply/checkoutservice-netpol-9-frontend-9.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: checkoutservice-8-allow-frontend-8
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend-8
    ports:
    - port: 21079
  podSelector:
    matchLabels:
      app: checkoutservice-8
